<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">InsaniyatVolunteer</string>

    <string name="login">Login</string>
    <string name="signup_volunteer">Sign Up Volunteer</string>
    <string name="login_volunteer">Login Volunteer</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="ambulance">Ambulance</string>
    <string name="mealdonation">Meal Donation</string>
    <string name="monetarydonation">Monetary Donation</string>
    <string name="bloodDonation">Blood Donation</string>
    <string name="volunteerHome">Volunteer Home</string>
    <string name="volunteer">Volunteer</string>
    <string name="user">User</string>
    <string name="volunteerSession">Volunteer Session</string>
    <string name="userHome">User Home</string>
    <string name="heading">Welcome to Insaniyat!</string>
    <string name="loginUser">User Login</string>
    <string name="signupUser">User Registeration</string>
    <string name="RandomMealDonation">Random Meal Donation</string>
    <string name="dastarkhwan">Dastarkhwan</string>
    <string name="mealdonate">Donate Meal</string>
    <string name="servings">Servings</string>
    <string name="date">Date</string>
    <string name="channels">Channels</string>
    <string name="members">Members</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="userRegisteration">User Registeration</string>
    <string name="DiscussionRoom">Discussion Room</string>
    <string name="addChannel">Enter Channel Name</string>
    <string name="newChannel">Add Channel</string>
    <string name="newMsg">Enter New Message</string>
    <string name="pendingApprovals">Pending Approvals</string>
    <string name="admin">Insaniyat Admin</string>
    <string name="call">Call</string>
    <string name="completed">Completed</string>
    <string name="direction">Directions</string>
    <string name="cancel">Cancel</string>
    <string name="donations">Donations</string>
    <string name="chooseOption">Choose an option</string>
    <string name="mealdonations">Meal Donations</string>
    <string name="InsaniyatVolunteer">Insaniyat Volunteer</string>
    <string name="accept">Accept</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donation">Donations</string>
    <string name="qoute">"There is no religion greater than humanity" - Abdul Sattar Eidhi.</string>
    <string name="quantity">Quantity</string>
    <string name="item">Item</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="servings2">Servings</string>

    <string name="channel_name">Channel1</string>
    <string name="channel_description">Channel1_Description</string>
</resources>
