<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bloodListItem"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/bloodgroup"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_blood_drawable"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/bloodGroup"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/listItem"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/drawable_padding"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/listItem"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>